Fixed minor bugs and made the clear button only visible when the search bar isn't empty

--- a/client/src/css/Profile.css
+++ b/client/src/css/Profile.css
@@ -12,6 +12,7 @@
 
 .profile .info-col {
     width: max(15vw, 15rem);
+    min-width: max(15vw, 15rem);
 }
 
 .profile .snippets-col {
